# Pointcloud-Object-Classification

./: .gitignore  .gitmodules  README.md
data/: eploration.ipynb
data/utils/: mcap_to_db3_converter.sh  qos_bag_override.yaml
install/: local_setup.sh  setup.sh
install/pre_processing/share/pre_processing/: package.bash  package.zsh
log/: latest_build
models/: evaluation.ipynb  training.ipynb
setup/: setup.sh
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Clusters.msg  Cone.msg
src/labeling_assist/: package.xml  setup.cfg  setup.py
src/labeling_assist/labeling_assist/: detector.py  labeling_assist_node.py
src/labeling_msgs/: CMakeLists.txt  package.xml
src/labeling_msgs/msg/: Cluster.msg
src/labeling_msgs/srv/: FrameRequest.srv  LabelingAssistRequest.srv  RosbagInfoRequest.srv
src/pc_processing/: package.xml  setup.cfg  setup.py
src/pc_processing/pc_processing/: filter.py  ground_removal.py  pc_clustering.py  pre_processing_node.py  reconstruct.py  utils.py
src/pre_processing/: CMakeLists.txt  package.xml
src/rosbag_frame_loader/: package.xml  setup.cfg  setup.py
src/rosbag_frame_loader/rosbag_frame_loader/: db3_frame_loader_node.py
src/rviz_interface_plugin/: CMakeLists.txt  package.xml
src/rviz_interface_plugin/include/: label_panel.hpp
src/rviz_interface_plugin/launch/: labeling_tool.launch.py
src/rviz_interface_plugin/plugins/: plugin_description.xml
src/rviz_interface_plugin/rviz/: rviz_labeling_config.rviz
src/rviz_interface_plugin/src/: label_panel.cpp
